--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/DemonsGalore/image-gallery#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.7.3",
     "multer": "^1.4.2"
   },
   "devDependencies": {
