--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.7.3",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "sharp": "^0.23.1"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
