--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.5",
     "axios": "^0.19.0",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
+    "fslightbox-react": "^1.4.2",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-responsive": "^8.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
